--- a/src/index.css
+++ b/src/index.css
@@ -70,7 +70,7 @@
   width: 80mm;
   margin: 0 auto;
   padding: 10mm;
-  font-family: 'Courier New', monospace;
+  font-family: "Courier New", monospace;
   background: white;
 }
 
